trunk/Archive2/c4/bfe6d8519bf6eb/output
main.cpp: In instantiation of 'void SexyMethod(T) [with T = const char*]':
main.cpp:16:20:   required from here
main.cpp:10:5: error: static assertion failed: This method takes sexy parameters only.
     static_assert(boost::mpl::contains<sexy_types, T>::value, "This method takes sexy parameters only.");
     ^
